<resources>
    <string name="app_name">BitChat</string>
    <string name="user">User profile</string>
    <string name="map">Groups Location</string>
    <string name="groups">Available groups</string>
    <string name="chat">Chat groups</string>
    <string name="login">Login</string>
    <string name="create_group_label">Create group</string>
    <string name="edit_group_label">Edit group</string>
    <string name="group_title_label">Group:</string>
    <string name="create_group_message">Are you sure you want to create a new chat group called: </string>
    <string name="edit_group_message">Are you sure you want to edit this group? </string>
    <string name="delete_group_label">Delete group</string>
    <string name="delete_group_message">Are you sure you want to delete</string>
    <string name="create_group">Create</string>
    <string name="edit_group">Edit</string>
    <string name="delete_group">Delete</string>
    <string name="send_message">Send</string>
    <string name="looking_for_friends">Looking for your friends...</string>
    <string name="logout_user">Logout</string>
    <string name="user_is_logggedout">User is logged out</string>
    <string name="sign_in_user">Sign in</string>
    <string name="error_missing_permissions">Cannot start without required permissions</string>
    <string name="new_group_name">Name your new group</string>
    <string name="cancel">Cancel</string>
    <string name="say_something">Say something ...</string>
    <string name="group_deleted_confirmation">was deleted successfully!</string>
    <string name="group_edit_confirmation">was changed successfully!</string>
    <string name="group_created_confirmation">was added successfully!</string>
    <string name="real_time_chat_label">Real Time Chat</string>
    <string name="groups_you_are_member_in">Groups you are member in</string>
    <string name="enable_nearby_chat">Enable nearby chat</string>
    <string name="nearby_chat_group">Nearby Offline Chat</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="group_cryptonarii">Cryptonarii</string>
</resources>